ipc/ipdl/test/ipdl/error/managerNoCtor.ipdl
include protocol "managedNoCtor.ipdl";

protocol managerNoCtor {
    manages managedNoCtor;

parent:
    // error: no ctor defined
    ~managedNoCtor();
};
